[package]
name = "simple-demo"
version = "0.1.0"
edition = "2021"

[features]
default = ["dlopen2"]
dlopen = []
dlopen2 = []


[dependencies]
anyhow = "1"
serde_json = "1"
walkdir = "2.5.0"
tokio = { version = "1", features = ["full"] }
rumqttc = "0.24.0"
redis = { version = "0.28", features = [
    "aio",
    "tokio-comp",
    "connection-manager",
] }
mlua = { version = "0.10", features = [
    "async",
    "lua54",
    "vendored",
    "async",
    "send",
    "error-send",
    "serialize",
    "macros",
    "anyhow",
    "userdata-wrappers",
] }
futures-util = "0.3.31"
num_cpus = "1.16.0"
log = "0.4"
simple_logger = "5.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "fmt", "chrono"] }
http-body-util = "0.1.2"
hyper = "1"
hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "full", "http2", "tokio"] }
toml = "0.8"
serde = { version = "1.0.217", features = ["alloc", "derive", "rc", "serde_derive"] }
mio = { version = "1.0.3", features = ["net", "os-poll"] }
odbc-api = "10.1.1"
csv = "1.3.1"
encoding_rs = "0.8.35"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
calamine = "0.26.1"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
thiserror = "2"
validator = { version = "0.20", features = ["derive"] }
derive_builder = "0.20.2"
qiniu-sdk = { version = "0.2.4", features = ["upload", "download","async", "isahc"] }
actix-web = "4"
actix-multipart = "0.7.2"
libloading = "0.8.6"
tokio-cron-scheduler = "0.13.0"
nanoid = "0.4.0"
chrono = "0.4.40"
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
dlopen2 = "0.7.0"
tokio-shared = "0.1.1"
tracing-shared = { version = "0.1.5", features = ["tokio"] }
tokio-modbus = { version = "0.16.1", features = ["tcp-server"] }
kamadak-exif = "0.6.1"
img-parts = "0.3.3"
image = { version = "0.25.6", features = ["serde"] }
imagesize = "0.13.0"
imageinfo = "0.7.27"
mediameta = { version = "0.2.0", features = ["image", "mediainfo"] }
video-rs = "0.10.3"
ffmpeg-next = "7.1.0"



# [dependencies.rquickjs]
# version = "0.9.0"
# default-features = false
# features = ["bindgen", "futures", "rust-alloc", "loader", "dyn-load"]
